Tweak pipeline name

--- a/.github/workflows/libcxx-trigger-buildkite.yaml
+++ b/.github/workflows/libcxx-trigger-buildkite.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: buildkite/trigger-pipeline-action@f0dcd5ae74452a8d17d473227c9d212dcc1eb8f9 # v2.4.0
         with:
           buildkite_api_access_token: ${{ secrets.BUILDKITE_API_ACCESS_TOKEN }}
-          pipeline: llvm-project/libcxx-ci
+          pipeline: llvm-project/ldionne-test-pipeline
           branch: ${{ github.ref_name }}
           commit: ${{ github.sha }}
           message: "Triggered by GitHub Actions PR against ${{ github.ref_name }}"
