--- a/.github/workflows/libcxx-trigger-buildkite.yaml
+++ b/.github/workflows/libcxx-trigger-buildkite.yaml
@@ -35,4 +35,5 @@ jobs:
           branch: ${{ github.ref_name }}
           commit: ${{ github.sha }}
           message: "Triggered by GitHub Actions PR against ${{ github.ref_name }}"
+          wait: true
           ignore_pipeline_branch_filter: true # The pipeline is configured with a dummy branch filter, only trigger via this Github Action
