Try to notify pipeline steps

--- a/libcxx/utils/ci/buildkite-pipeline.yml
+++ b/libcxx/utils/ci/buildkite-pipeline.yml
@@ -32,6 +32,10 @@ definitions:
       - "**/CMakeError.log"
       - "**/CMakeOutput.log"
 
+notify:
+  - github_check:
+      name: "TEST NAME"
+
 steps:
 - group: ARM
   steps:
